--- a/formularios-I.html
+++ b/formularios-I.html
@@ -1,2 +1,52 @@
 <!DOCTYPE html>
 
+<form action="/formularios-I" method="post">
+    <fieldset>
+        <legend>Dados Gerais</legend>
+
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" minlength="3"/>
+
+        <label for="data-nascimento">Data de Nascimento:</label>
+        <input type="date" id="data-nascimento"/>
+
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00"/>
+    </fieldset>
+
+    <fieldset>
+        <legend>Endereço</legend>
+
+        <label for="tipo-endereco">Tipo de Endereço:</label>
+        <select id="tipo-endereco">
+            <option value="rua">Rua</option>
+            <option value="estrada">Estrada</option>
+            <option value="rodovia">Rodovia</option>
+            <option value="outros">Outro</option>
+        </select>
+
+        <label for="logradouro">Logradouro:</label>
+        <input type="text" id="logradouro"/>
+
+        <label for="numero">Número:</label>
+        <input type="text" id="numero"/>
+
+        <label for="complemento">Complemento:</label>
+        <input type="text" id="complemento"/>
+
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro"/>
+    </fieldset>
+
+    <fieldset>
+        <legend>Fale Conosco</legend>
+
+        <label for="mensagem">Mensagem:</label>
+        <textarea type="text" id="mensagem"></textarea>
+    </fieldset>
+
+    <fieldset>
+        <button type="submit">Enviar</button>
+        <button type="reset">Limpar</button>
+    </fieldset>
+</form>
