--- a/formularios-I.html
+++ b/formularios-I.html
@@ -11,7 +11,7 @@
         <input type="date" id="data-nascimento"/>
 
         <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00"/>
+        <input type="text" id="cpf" placeholder="Somente números" minlength="11" maxlength="11"/>
     </fieldset>
 
     <fieldset>
